# Rust-STM

mv-fc/: Cargo.toml  memory.x
mv-fc/.cargo/: config.toml
mv-fc/src/: main.rs
stm-emulator/: Cargo.toml
stm-emulator/src/: main.rs
