[package]
authors = ["klemie <lemieuxkristopher@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "mv-fc"
version = "0.1.0"

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
cortex-m = "0.7.0"
cortex-m-semihosting = "0.5.0"
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"
nb = "1.0.0"

[dependencies.stm32l0xx-hal]
version = "0.10.0"
features = ["mcu-STM32L053R8Tx", "rt"]


[profile.dev]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"

[profile.release]
codegen-units = 1
lto = true
debug = true
opt-level = "s"
